--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>DOGGO</title>
     <link rel="stylesheet" href="index.css">
-    <script type="text/javascript" src="src/index.js"></script>
+    <script defer type="text/javascript" src="src/index.js"></script>
     <link rel="shortcut icon" href="doge.jpeg">
   </head>
   <body>
@@ -17,7 +17,9 @@
     <div id="dog-summary-container">
       <h1>DOGGO:</h1>
       <div id="dog-info">
-        
+        <img id = "dog-image" src = "dog_image_url" />
+        <h2 id = "dog-name" >Mr. Bonkers</h2>
+        <button id = "dog-button"> Good Dog!</button>
       </div>
     </div>
   </body>
